--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-06-03 Eduardo Gurgel <edgurgel@gmail.com>
+* Good news: Parallel function modifier added to parser. Finally!
+
 2010-23-02 Eduardo Gurgel <edgurgel@gmail.com>
 * Bugfix.
 
