--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-05-04 Eduardo Gurgel <edgurgel@gmail.com>
+* Draft.
+
 2010-06-03 Eduardo Gurgel <edgurgel@gmail.com>
 * Good news: Parallel function modifier added to parser. Finally!
 
