--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-12-04 Eduardo Gurgel <edgurgel@gmail.com>
+* Almost there. Trying to add __get_types() to already generated AST.
+
 2010-09-04 Eduardo Gurgel <edgurgel@gmail.com>
 * Initial definition of __get_types() function.
 
