--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-16-04 Eduardo Gurgel <edgurgel@gmail.com>
+* Bugfix.
+
 2010-15-04 Eduardo Gurgel <edgurgel@gmail.com>
 * __get_types definition completed.
 
