--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+2010-18-04 Eduardo Gurgel <edgurgel@gmail.com>
+* Elsa modified to handle Pobcpp namespace defined by libpobcpp.
+* libpobcpp totally redefined.
+* a real example at example dir
+
 2010-16-04 Eduardo Gurgel <edgurgel@gmail.com>
 * Bugfix.
 
