--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2010-21-04 Eduardo Gurgel <edgurgel@gmail.com>
+* Example working with some workarounds.
+* create_unit finished.
+
 2010-20-04 Eduardo Gurgel <edgurgel@gmail.com>
 * create_unit defined.
 * Example bugfixed.
