--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-02-05 Eduardo Gurgel <edgurgel@gmail.com>
+* create_unit.h : New create_unit function to null units.
+
 2010-21-04 Eduardo Gurgel <edgurgel@gmail.com>
 * Example working with some workarounds.
 * create_unit finished.
