--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+2010-07-05 Eduardo Gurgel <edgurgel@gmail.com>
+* pobcpp.h - Enumerator imlpementation completed.
+* created_unit.h : enumerated unit creation process implementation initiated.
+* unit_type.h : Modifications to handle enumerated units.
+
 2010-04-05 Eduardo Gurgel <edgurgel@gmail.com>
 * pobcpp.cc : - Added pobTypeStr to handle Pobcpp::Unit.
               - Moved BaseClassSpec modification to PObCpppreTypeASTVisitor.
