--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-21-05 Eduardo Gurgel <edgurgel@gmail.com>
+* unit_type.cpp : Bugfix
+
 2010-20-05 Eduardo Gurgel <edgurgel@gmail.com>
 * Almost complete create_unit to enumerated units.
 
