--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-23-05 Eduardo Gurgel <edgurgel@gmail.com>
+* create_unit.h: Bugfix
+
 2010-21-05 Eduardo Gurgel <edgurgel@gmail.com>
 * unit_type.cpp : Bugfix
 
