--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2010-24-05 Eduardo Gurgel <edgurgel@gmail.com>
+* examples/ folder created to tests.
+* basic_communicator.h,.cpp : broadcast function added.
+
 2010-23-05 Eduardo Gurgel <edgurgel@gmail.com>
 * create_unit.h: Bugfix
 
