--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2010-26-05 Eduardo Gurgel <edgurgel@gmail.com>
+* basic_communicator.h,.cpp : Bugfix.
+* Case Study implementation initiated.
+
 2010-25-05 Eduardo Gurgel <edgurgel@gmail.com>
 * basic_communicator.h,.cpp : gather function added.
 
