--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,11 @@
-2010-05-06 Eduardo Gurgel <edgurgel@gmail.com>
+2010-06-07 Eduardo Gurgel <edgurgel@gmail.com>
+* Casestudy bugfixes.
+
+2010-06-05 Eduardo Gurgel <edgurgel@gmail.com>
 * pobcpp.cc created at pork directory : Now working directly with code. No more
 AST modification.
 
-2010-03-06 Eduardo Gurgel <edgurgel@gmail.com>
+2010-06-03 Eduardo Gurgel <edgurgel@gmail.com>
 * Trying to use pork instead of pure Elsa.
 * pork directory created. Elsa moved.
 
