* Unit specification. Done.

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
 2010-07-07 Eduardo Gurgel <edgurgel@gmail.com>
+* Unit specification. Done.
+
+2010-07-07 Eduardo Gurgel <edgurgel@gmail.com>
 * Using pork to modifie an unit spec.
 
 2010-07-06 Eduardo Gurgel <edgurgel@gmail.com>
