--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-18-07 Eduardo Gurgel <edgurgel@gmail.com>
+* Better way to handle patches.
+
 2010-09-07 Eduardo Gurgel <edgurgel@gmail.com>
 * Unit declaration (variable and forwarding declaration). Done.
 
