--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-19-07 Eduardo Gurgel <edgurgel@gmail.com>
+* Bugfix.
+
 2010-18-07 Eduardo Gurgel <edgurgel@gmail.com>
 * Better way to handle patches.
 
