--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-27-07 Eduardo Gurgel <edgurgel@gmail.com>
+* Bugfix on enumerated units.
+
 2010-19-07 Eduardo Gurgel <edgurgel@gmail.com>
 * Bugfix.
 
