* Other Bugfix on enumerated units.

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
 2010-27-07 Eduardo Gurgel <edgurgel@gmail.com>
+* Other Bugfix on enumerated units.
+
+2010-27-07 Eduardo Gurgel <edgurgel@gmail.com>
 * Bugfix on enumerated units.
 
 2010-19-07 Eduardo Gurgel <edgurgel@gmail.com>
