--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-03-09 Eduardo Gurgel <edgurgel@gmail.com>
+* TODO updated.
+
 2010-27-07 Eduardo Gurgel <edgurgel@gmail.com>
 * __get_types function done.
 * PigletParser using Pobcpp visitor to change AST info.
