* Added some comments. * Better organization.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2010-04-09 Eduardo Gurgel <edgurgel@gmail.com>
+* Added some comments.
+* Better organization.
+
 2010-03-09 Eduardo Gurgel <edgurgel@gmail.com>
 * TODO updated.
 
