* Bugfix and new bug.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-14-10 Eduardo Gurgel <edgurgel@gmail.com>
+* Bugfix and new bug.
+
 2010-11-10 Eduardo Gurgel <edgurgel@gmail.com>
 * Bugfix and removing old code.
 
