* Hard to comment.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-30-10 Eduardo Gurgel <edgurgel@gmail.com>
+* Hard to comment.
+
 2010-14-10 Eduardo Gurgel <edgurgel@gmail.com>
 * Bugfix and new bug.
 
