* pobcppc script patching and generating a correct file. * TODO updated.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2010-02-11 Eduardo Gurgel <edgurgel@gmail.com>
+* pobcppc script patching and generating a correct file.
+* TODO updated.
+
 2010-30-10 Eduardo Gurgel <edgurgel@gmail.com>
 * Hard to comment.
 
