--- a/TODO
+++ b/TODO
@@ -2,8 +2,7 @@
 * README.txt
 * Unit definition
   - Test with templates.
-  - Remove enumerator indicator:
-    ex: unit A [i:j] [n:m] -> unit A
 * Insert create_unit<...>(...) at each unit constructor.
 * Create pobcpprun.
   - Give information of number of copies to each executable.
+* Find a way to simplify libpocpp includes and generate a single file pobcpp.h
