* parallel function modifier working on parsing * TODO updated

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2010-09-11 Eduardo Gurgel <edgurgel@gmail.com>
+* parallel function modifier working on parsing
+* TODO updated
+
 2010-02-11 Eduardo Gurgel <edgurgel@gmail.com>
 * TODO updated again!
 
