--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@
 * README.txt
 * Unit definition
   - Test with templates.
+	- parallel function modifier treatment (patching and typecheck)
 * Insert create_unit<...>(...) at each unit constructor.
 * Create pobcpprun.
   - Give information of number of copies to each executable.
