--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2010-25-12 Eduardo Gurgel <edgurgel@gmail.com>
+* pobcppc bugfixed. > instead of >>
+* Bugfix on create_unit function.
+
 2010-22-12 Eduardo Gurgel <edgurgel@gmail.com>
 * create_unit_impl.h removed.
 * Unrolling some modifications on libpobcpp.
