--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-12-05 Eduardo Gurgel <edgurgel@gmail.com>
+* Bugfix.
+
 2010-10-05 Eduardo Gurgel <edgurgel@gmail.com>
 * Declaration and definition working. Patching ok.
 
