* Easier definition at grammar bout CommunicatorSpec.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-13-05 Eduardo Gurgel <edgurgel@gmail.com>
+* Easier definition at grammar bout CommunicatorSpec.
+
 2010-12-05 Eduardo Gurgel <edgurgel@gmail.com>
 * Bugfix.
 
