* ranksof() implementation on libpobcpp (not tested).

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,5 @@
+2010-18-06 Eduardo Gurgel <edgurgel@gmail.com>
+* ranksof() implementation on libpobcpp (not tested).
 2010-14-06 Eduardo Gurgel <edgurgel@gmail.com>
 * Finally ranksof() implementation on grammar and type checking :)
 
