--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-25-06 Eduardo Gurgel <edgurgel@gmail.com>
+* Ranksof patch done.
+
 2010-22-06 Eduardo Gurgel <edgurgel@gmail.com>
 * visitExpression done, but pork needs a remake on expression visitor(TODO).
 
