* New input example.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-26-06 Eduardo Gurgel <edgurgel@gmail.com>
+* New input example.
+
 2010-25-06 Eduardo Gurgel <edgurgel@gmail.com>
 * Ranksof patch done.
 
