--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,10 @@
+2010-28-06 Eduardo Gurgel <edgurge@gmail.com>
+* Modification on pre-typed AST almost done for CommunicatorClauseOpt.
+
+2010-27-06 Eduardo Gurgel <edgurge@gmail.com>
+* Better definition to CommunicatorClauseOpt. Communicator will be a normal type
+and not part of grammar.
+
 2010-26-06 Eduardo Gurgel <edgurgel@gmail.com>
 * New input example.
 
