--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2010-30-06 Eduardo Gurgel <edgurge@gmail.com>
+* CommunicationClauseOpt bugfixed. 
+* TODO: insert default parameter when a CommnicatorClauseOpt appears.
+
 2010-28-06 Eduardo Gurgel <edgurge@gmail.com>
 * Modification on pre-typed AST almost done for CommunicatorClauseOpt.
 
