--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-03-07 Eduardo Gurgel <edgurge@gmail.com>
+* Default paramter done on CommunicatorClauseOpt statement.
+
 2010-30-06 Eduardo Gurgel <edgurge@gmail.com>
 * CommunicationClauseOpt bugfixed. 
 * TODO: insert default parameter when a CommnicatorClauseOpt appears.
