--- a/TODO
+++ b/TODO
@@ -1,9 +1,10 @@
-* Makefile (Done)
 * README.txt
 * Unit definition
   - Test with templates.
-	- parallel function modifier treatment (patching and typecheck)
 * Create pobcpprun.
   - Give information of number of copies to each executable.
-* Resolve "comm" problem! How to insert it?
-* Remove enumerators and patches.
+* Resolve "comm" problem! How to implicitly insert it?
+* Error treatment with expections.
+* Auto inheritance.
+* Create Group class to handle MPI_Groups
+* Unit and p-object relation
