--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2011-02-12 Eduardo Gurgel <edgurgel@gmail.com>
+* Group excl function added.
+
 2011-01-12 Eduardo Gurgel <edgurgel@gmail.com>
 * Bugfixes on Group class.
 * hellogroup folder included with some tests with Group and Communicator methods.
