--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2011-19-12 Eduardo Gurgel <edgurgel@gmail.com>
+* getMember() fixed to handle different lines.
+* Now Members are included, not only MR_decls.
+
 2011-17-12 Eduardo Gurgel <edgurgel@gmail.com>
 * getMember() function created to copy a member complete definition.
 
