* Happy new year! * casestudy adjusted. * patcher updated.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+2012-02-01 Eduardo Gurgel <edgurgel@gmail.com>
+* Happy new year!
+* casestudy adjusted.
+* patcher updated.
+
 2011-30-12 Eduardo Gurgel <edgurgel@gmail.com>
 * casestudy/ update
 
