--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2012-03-01 Eduardo Gurgel <edgurgel@gmail.com>
+* prepobcppc working!
+
 2012-02-01 Eduardo Gurgel <edgurgel@gmail.com>
 * Happy new year!
 * casestudy adjusted.
