--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2012-04-01 Eduardo Gurgel <edgurgel@gmail.com>
+* libpobcpp updated to handle reduce collective calls.
+* casestudy fixed.
+
 2012-03-01 Eduardo Gurgel <edgurgel@gmail.com>
 * prepobcppc working!
 
