--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2012-06-01 Eduardo Gurgel <edgurgel@gmail.com>
+* casestudy ready.
+
 2012-05-01 Eduardo Gurgel <edgurgel@gmail.com>
 * pobcppc now removes prepob suffix.
 * casestudy almost there!
