--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+2012-13-01 Eduardo Gurgel <edgurgel@gmail.com>
+* hellogroup now has a compile.sh to handle hello.cpp
+* removeCommunicatorDecl is now on prepob phase.
+* Useless functions removed from many places
+
 2012-12-01 Eduardo Gurgel <edgurgel@gmail.com>
 * reduce() bugfixed on Basic_Communicator
 * casestudy working.
