--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2012-15-01 Eduardo Gurgel <edgurgel@gmail.com>
+* petsc main.cpp updated.
+
+
 2012-13-01 Eduardo Gurgel <edgurgel@gmail.com>
 * hellogroup now has a compile.sh to handle hello.cpp
 * removeCommunicatorDecl is now on prepob phase.
