--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
+2012-18-01 Eduardo Gurgel <edgurgel@gmail.com>
+* Integer Sort code provided by NAS Parallel Benchmark Team (http://www.nas.nasa.gov/Software/NPB)
+* casestudy moved to farm (Better definition)
+
 2012-15-01 Eduardo Gurgel <edgurgel@gmail.com>
 * petsc main.cpp updated.
-
 
 2012-13-01 Eduardo Gurgel <edgurgel@gmail.com>
 * hellogroup now has a compile.sh to handle hello.cpp
