--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2012-21-02 Eduardo Gurgel <edgurgel@gmail.com>
+* Missing alltoallv function done.
+* IS updated.
+
 2012-31-01 Eduardo Gurgel <edgurgel@gmail.com>
 * petsc updated.
 
