--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2012-24-02 Eduardo Gurgel <edgurgel@gmail.com>
+* prepobcpp bugfixed
+
 2012-21-02 Eduardo Gurgel <edgurgel@gmail.com>
 * Missing alltoallv function done.
 * IS updated.
