--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
 2012-24-02 Eduardo Gurgel <edgurgel@gmail.com>
+* pobcpp deprecated
+
+2012-24-02 Eduardo Gurgel <edgurgel@gmail.com>
 * prepobcpp bugfixed
 
 2012-21-02 Eduardo Gurgel <edgurgel@gmail.com>
