* CommClauseCall initial development. Bugfixes incoming.

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
 2012-24-02 Eduardo Gurgel <edgurgel@gmail.com>
+* CommClauseCall initial development. Bugfixes incoming.
+
+2012-24-02 Eduardo Gurgel <edgurgel@gmail.com>
 * pobcpp deprecated
 
 2012-24-02 Eduardo Gurgel <edgurgel@gmail.com>
