--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
 2012-27-02 Eduardo Gurgel <edgurgel@gmail.com>
+* Prototype working.
+
+2012-27-02 Eduardo Gurgel <edgurgel@gmail.com>
 * Initial code to complete functions with Communicator arguments.
 
 2012-24-02 Eduardo Gurgel <edgurgel@gmail.com>
